# Humane-Proxy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  LAUNCHGUIDE.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  glama.json  humane_proxy.yaml  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  publish-mcp.yml  pypi.yml  tests.yaml
dashboard/templates/: index.html
evals/: sample.json
humane_proxy/: .env.example  __init__.py  cli.py  config.py  config.yaml  errors.py  mcp_server.py  telemetry.py
humane_proxy/api/: __init__.py  admin.py
humane_proxy/classifiers/: __init__.py  embedding_classifier.py  heuristics.py  models.py  pipeline.py
humane_proxy/classifiers/stage3/: __init__.py  base.py  llamaguard.py  openai_chat.py  openai_moderation.py
humane_proxy/escalation/: __init__.py  local_db.py  query.py  router.py  webhooks.py
humane_proxy/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py
humane_proxy/middleware/: __init__.py  interceptor.py
humane_proxy/risk/: __init__.py  redis_trajectory.py  trajectory.py
humane_proxy/storage/: __init__.py  base.py  factory.py  postgres.py  redis.py  sqlite.py
tests/: __init__.py  conftest.py  test_admin_api.py  test_care_response.py  test_cli.py  test_config.py  test_embedding_classifier.py  test_embedding_singleton.py  test_enhanced_webhooks.py  test_heuristics.py  test_integrations_smoke.py  test_interceptor.py  test_local_db.py  test_mcp_security.py  test_models.py  test_pipeline.py  test_pipeline_config_validation.py  test_redis_concurrency.py  test_router.py  test_self_harm_threshold.py  test_session_ownership.py  test_stage3.py  test_storage_backends.py  test_telemetry.py  test_trajectory.py  test_webhooks.py
