[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humane-proxy"
version = "0.2.0"
description = "Lightweight, plug-and-play AI safety middleware that protects humans."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "HumaneProxy Contributors"},
]
keywords = ["ai-safety", "llm", "middleware", "guardrails", "human-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "uvicorn>=0.22.0",
    "click>=8.0",
]

[project.scripts]
humane-proxy = "humane_proxy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx",
]
ml = [
    "sentence-transformers>=2.2.0",
]
webhooks = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Vishisht16/Humane-Proxy"
Repository = "https://github.com/Vishisht16/Humane-Proxy"
Issues = "https://github.com/Vishisht16/Humane-Proxy/issues"

# Ensure config.yaml is included in the built package.
[tool.setuptools.package-data]
humane_proxy = ["config.yaml"]

[tool.setuptools.packages.find]
include = ["humane_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
