[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humane-proxy"
version = "0.4.0"
description = "Lightweight, plug-and-play AI safety middleware that protects humans."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Vishisht Mishra", email = "Vishisht16@users.noreply.github.com"},
]
keywords = ["ai-safety", "llm", "middleware", "guardrails", "human-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "uvicorn>=0.48.0",
    "click>=8.4.1",
    "rich>=15.0.0",
]

[project.scripts]
humane-proxy = "humane_proxy.cli:main"
hp = "humane_proxy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx",
]
ml = [
    "sentence-transformers>=2.2.0",
]
mcp = [
    "fastmcp>=0.4.0",
]
langchain = [
    "humane-proxy[mcp]",
    "langchain-mcp-adapters>=0.1.0",
]
webhooks = [
    "httpx>=0.28.1",
]
redis = [
    "redis>=5.0",
]
postgres = [
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.1",
]
llamaindex = [
    "llama-index-core>=0.10",
]
crewai = [
    "crewai[tools]>=0.11.2",
]
autogen = [
    "autogen-agentchat>=0.4",
]
all = [
    "humane-proxy[ml,mcp,langchain,redis,postgres,llamaindex,crewai,autogen]",
]

[project.urls]
Homepage = "https://github.com/Vishisht16/Humane-Proxy"
Repository = "https://github.com/Vishisht16/Humane-Proxy"
Issues = "https://github.com/Vishisht16/Humane-Proxy/issues"

[tool.setuptools.package-data]
humane_proxy = ["config.yaml"]

[tool.setuptools.packages.find]
include = ["humane_proxy*"]

[tool.setuptools.data-files]
"" = ["server.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
